// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preset returns expected config - defaults node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6.yml": "<PROJECT_ROOT>/lib/files/appveyor-6.yml",
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6.yml": "641986afce697c9e8351d34987fe0657bdec1fae8b9dcf4ef896d358ab8ee089",
        "lib/files/circleci-6.yml": "4fd9d1887710e02871486fa21d6cc5d35d7dce9e55a0e4ee39bc5145c136d23c",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6+.yml": "<PROJECT_ROOT>/lib/files/appveyor-6+.yml",
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6+.yml": "251406424b8cb49b1a8858ef7eb521ae57856964625daed85b591692e8f98e15",
        "lib/files/circleci-6+.yml": "f8afa0de22d1ce5ee659b86993cf898e85b383599dab0f06ef052d1f4510ef37",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8.yml": "<PROJECT_ROOT>/lib/files/appveyor-8.yml",
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8.yml": "70c6174a960e80495eca240ba2516a933ff7f67abc1287de0d1a3068156448dc",
        "lib/files/circleci-8.yml": "af4cc99927d13f77b7283335f7671d4943326a1e1e14c5ced4e4c5ab613b21a4",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8+.yml": "<PROJECT_ROOT>/lib/files/appveyor-8+.yml",
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8+.yml": "9a237c2fcea7a8f3e5e3d89a248a763f6c078803afc547ab18478b2083c82492",
        "lib/files/circleci-8+.yml": "d7fe10832d27fb9e6d7aeb958ac04d8a99175e5fcc9f0885a44cea634d57142f",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - defaults node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-10.yml": "<PROJECT_ROOT>/lib/files/appveyor-10.yml",
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-10.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-10.yml": "f10642c8ced78fa8015fd1b40623e2940a2cc953147d5631ee57ab6144e82cc8",
        "lib/files/circleci-10.yml": "0845f9fe3b3f3b12db57e4dbe68ca66fa0c7464cfe717112682a30a099096285",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6.yml": "<PROJECT_ROOT>/lib/files/appveyor-6.yml",
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6.yml": "641986afce697c9e8351d34987fe0657bdec1fae8b9dcf4ef896d358ab8ee089",
        "lib/files/circleci-6.yml": "4fd9d1887710e02871486fa21d6cc5d35d7dce9e55a0e4ee39bc5145c136d23c",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-6+.yml": "<PROJECT_ROOT>/lib/files/appveyor-6+.yml",
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-6+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-6+.yml": "251406424b8cb49b1a8858ef7eb521ae57856964625daed85b591692e8f98e15",
        "lib/files/circleci-6+.yml": "f8afa0de22d1ce5ee659b86993cf898e85b383599dab0f06ef052d1f4510ef37",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8.yml": "<PROJECT_ROOT>/lib/files/appveyor-8.yml",
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8.yml": "70c6174a960e80495eca240ba2516a933ff7f67abc1287de0d1a3068156448dc",
        "lib/files/circleci-8.yml": "af4cc99927d13f77b7283335f7671d4943326a1e1e14c5ced4e4c5ab613b21a4",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-8+.yml": "<PROJECT_ROOT>/lib/files/appveyor-8+.yml",
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-8+.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-8+.yml": "9a237c2fcea7a8f3e5e3d89a248a763f6c078803afc547ab18478b2083c82492",
        "lib/files/circleci-8+.yml": "d7fe10832d27fb9e6d7aeb958ac04d8a99175e5fcc9f0885a44cea634d57142f",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "appveyor.yml": "<PROJECT_ROOT>/appveyor.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
        "appveyor.yml",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "appveyor.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/appveyor-10.yml": "<PROJECT_ROOT>/lib/files/appveyor-10.yml",
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-library.js": "<PROJECT_ROOT>/lib/files/jest-library.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-library.js",
        "lib/files/appveyor-10.yml",
      ],
      "hash": Object {
        "lib/files/appveyor-10.yml": "f10642c8ced78fa8015fd1b40623e2940a2cc953147d5631ee57ab6144e82cc8",
        "lib/files/circleci-10.yml": "0845f9fe3b3f3b12db57e4dbe68ca66fa0c7464cfe717112682a30a099096285",
        "lib/files/jest-library.js": "322dd136d43514064c38fdf8cd999d6511d83af8efbb35d8d355a3f35937c6c4",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6.yml": "4fd9d1887710e02871486fa21d6cc5d35d7dce9e55a0e4ee39bc5145c136d23c",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6+.yml": "f8afa0de22d1ce5ee659b86993cf898e85b383599dab0f06ef052d1f4510ef37",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8.yml": "af4cc99927d13f77b7283335f7671d4943326a1e1e14c5ced4e4c5ab613b21a4",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8+.yml": "d7fe10832d27fb9e6d7aeb958ac04d8a99175e5fcc9f0885a44cea634d57142f",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - isApp = true, windows false node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-10.yml": "0845f9fe3b3f3b12db57e4dbe68ca66fa0c7464cfe717112682a30a099096285",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 6 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6.yml": "<PROJECT_ROOT>/lib/files/circleci-6.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6.yml": "4fd9d1887710e02871486fa21d6cc5d35d7dce9e55a0e4ee39bc5145c136d23c",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 6+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-6+.yml": "<PROJECT_ROOT>/lib/files/circleci-6+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-6+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-6+.yml": "f8afa0de22d1ce5ee659b86993cf898e85b383599dab0f06ef052d1f4510ef37",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 8 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8.yml": "<PROJECT_ROOT>/lib/files/circleci-8.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8.yml": "af4cc99927d13f77b7283335f7671d4943326a1e1e14c5ced4e4c5ab613b21a4",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 8+ 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-8+.yml": "<PROJECT_ROOT>/lib/files/circleci-8+.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-8+.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-8+.yml": "d7fe10832d27fb9e6d7aeb958ac04d8a99175e5fcc9f0885a44cea634d57142f",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;

exports[`preset returns expected config - windows = false node 10 1`] = `
Object {
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".circleci/config.yml": "<PROJECT_ROOT>/.circleci/config.yml",
        "jest.config.js": "<PROJECT_ROOT>/jest.config.js",
        "wallaby.config.js": "<PROJECT_ROOT>/wallaby.config.js",
      },
      "allowChanges": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
      "files": Array [
        "wallaby.config.js",
        ".circleci/config.yml",
        "jest.config.js",
      ],
      "ignoreUpdates": Object {
        ".circleci/config.yml": false,
        "jest.config.js": false,
        "wallaby.config.js": false,
      },
    },
    "makeDirs": Array [
      ".circleci",
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/circleci-10.yml": "<PROJECT_ROOT>/lib/files/circleci-10.yml",
        "lib/files/jest-app.js": "<PROJECT_ROOT>/lib/files/jest-app.js",
        "lib/files/wallaby.js": "<PROJECT_ROOT>/lib/files/wallaby.js",
      },
      "files": Array [
        "lib/files/wallaby.js",
        "lib/files/circleci-10.yml",
        "lib/files/jest-app.js",
      ],
      "hash": Object {
        "lib/files/circleci-10.yml": "0845f9fe3b3f3b12db57e4dbe68ca66fa0c7464cfe717112682a30a099096285",
        "lib/files/jest-app.js": "4a1c02ec2ad2ed327246fea56e516a92bd7b57fedaba14da38faaa117410670d",
        "lib/files/wallaby.js": "bfd3a73af1c8ecd93d812d70e4e599406f14eda36920955df69a4109a3a2ed2e",
      },
    },
  },
  "packageJson": Array [
    Object {
      "scripts": Object {
        "test.update": "jest --updateSnapshot",
        "test.watch": "jest --watch",
      },
    },
  ],
  "prepublishOnly": Array [
    "backtrack test",
  ],
  "prepush": Array [
    "backtrack test",
  ],
  "resolve": Object {
    "@backtrack/preset-jest": "<PROJECT_ROOT>/lib",
  },
  "test": Array [
    "jest --passWithNoTests",
  ],
  "test.ci": Array [
    "jest --passWithNoTests --coverage --maxWorkers 2",
    Object {
      "name": "codecov",
      "task": "codecov",
    },
  ],
  "test.ci-pretest": Array [
    [Function noop],
  ],
}
`;
